--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,11 @@ next-env.d.ts
 
 # Claude Code
 .auto-claude/
+
+# Auto Claude generated files
+.auto-claude-security.json
+.auto-claude-status
+.claude_settings.json
+.worktrees/
+.security-key
+logs/security/
